--- a/src/style/generalstyle.css
+++ b/src/style/generalstyle.css
@@ -49,6 +49,7 @@ label{
 }
 
 input{
+  display: block;
   margin:auto;
 }
 
@@ -58,6 +59,6 @@ input{
   margin-top: 20px;
 }
 
-/* #new-supermarket-name-null{
-  display: none;
-} */
+#new-supermarket-name-null{
+  color: red;
+}
